# syclten

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
include/sten/: device.hpp  math.hpp  sten.hpp  tensor.hpp  tensor_ops.hpp  tensorexpr.hpp  tensorops.hpp  types.hpp
include/sten/ops/: dispatch.hpp  kernelexpr.hpp  kernels.hpp  queue.hpp
src/: device.hpp  tensor.cpp
src/ops/: dispatch.hpp  kernels.hpp  sum.hpp
test/: CMakeLists.txt  test_math.cpp  test_tensor.cpp
